--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "serve": "./bin/grafana-server web"
   },
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@csii/vx-clay": "^4.9.0"
+  }
 }
